--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,6 @@
 #main {
-  background-color: #6b25d8;
-  height: 100%;
-
+  background-color: #330033;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23404' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23505'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
   #menu {
     color: #fff;
     padding-top: 36px;
@@ -54,14 +53,72 @@
       width: fit-content;
       align-self: center;
       padding: 12px;
-      background-color: #ffd10d;
+      background-color: #ffc10d;
       border-radius: 16px;
       border: none;
-      color: #555;
-      margin-bottom: 64px;
+      color: #333;
+      margin-bottom: 100px;
       -webkit-box-shadow: 4px 7px 22px -13px rgba(0, 0, 0, 0.61);
       -moz-box-shadow: 4px 7px 22px -13px rgba(0, 0, 0, 0.61);
       box-shadow: 4px 7px 22px -13px rgba(0, 0, 0, 0.61);
     }
   }
+}
+
+#services {
+  width: 960px;
+  margin: 0 auto;
+  margin-bottom: 64px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  .cards {
+    display: flex;
+
+    .service {
+      max-width: 264px;
+      text-align: center;
+
+      i {
+        color: #330033;
+        font-size: 60px;
+      }
+
+      h2 {
+        text-transform: uppercase;
+        color: #330033;
+        font-size: 16px;
+        padding: 12px;
+      }
+
+      p {
+        font-size: 14px;
+      }
+
+      & + div {
+        margin-left: 15px;
+      }
+    }
+  }
+  a {
+    margin-top: 36px;
+    width: 120px;
+    align-self: center;
+    padding: 12px;
+    background-color: transparent;
+    border-radius: 16px;
+    border: solid 1px #330033;
+    text-decoration: none;
+    text-align: center;
+    font-size: 12px;
+    color: #330033;
+    text-transform: uppercase;
+  }
+}
+
+.divider {
+  height: 0.6px;
+  width: 100%;
+  background-color: #ccc;
 }
