--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,49 @@ body {
   height: 0.6px;
   width: 100%;
   background-color: #ccc; }
+
+#portfolio .container {
+  width: 960px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column; }
+  #portfolio .container h2 {
+    text-transform: uppercase;
+    color: #999;
+    margin: 36px 0;
+    letter-spacing: 5px;
+    text-align: center; }
+  #portfolio .container .item {
+    display: flex; }
+    #portfolio .container .item img {
+      height: 260px;
+      width: 100%;
+      display: block; }
+    #portfolio .container .item .about {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly; }
+      #portfolio .container .item .about h3 {
+        font-size: 24px; }
+      #portfolio .container .item .about p {
+        color: #888;
+        font-size: 14px; }
+      #portfolio .container .item .about .buttons a {
+        padding: 12px 28px;
+        background-color: transparent;
+        border-radius: 16px;
+        border: solid 1px #330033;
+        text-decoration: none;
+        font-size: 12px;
+        color: #330033;
+        text-transform: uppercase; }
+      #portfolio .container .item .about .buttons .filled {
+        background-color: #330033;
+        color: #fff; }
+      #portfolio .container .item .about .buttons > a {
+        margin-right: 10px; }
+
+#portfolio hr {
+  background-color: #ccc;
+  margin: 96px 0; }
