--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,11 @@
 
 @import "base/_base.scss";
 @import "components/header.scss";
+@import "components/hero.scss";
+@import "components/services.scss";
+@import "components/portfolio.scss";
+@import "components/contact.scss";
+
+
+
+
