--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,15 +1,35 @@
 #main {
   background-color: #330033;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23404' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23505'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
+
   #menu {
     color: #fff;
-    padding-top: 36px;
-    width: 960px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
+    height: 56px;
+    align-items: center;
     text-transform: uppercase;
+    display: flex;
+    z-index: 100;
+    transition: .25s padding-top ease-in-out,.25s padding-bottom ease-in-out;
+    background: 0 0;
+    width: 100%;
 
+    &.headerFixed{
+      width: 100%;
+      position: absolute;
+      top: 0;
+    }
+    
+    &.headerScrolling{
+      background-color: #330033; 
+      position: fixed;
+      border-bottom: #0000001c 2px solid;
+    }
+    .container{
+      width: 1080px;
+      margin: 0 auto;
+      justify-content: space-between;
+      display: flex;
+    }
     h3 {
       font-weight: bold;
       font-size: 14px;
@@ -30,230 +50,10 @@
       }
     }
   }
-
-  #hero {
-    display: flex;
-    flex-direction: column;
-    width: 480px;
-    margin: 64px auto;
-    text-align: center;
-    color: #fff;
-
-    h1 {
-      font-size: 35px;
-      line-height: 42px;
-    }
-
-    p {
-      font-size: 16px;
-      margin: 24px 0;
-    }
-
-    button {
-      width: 180px;
-      align-self: center;
-      padding: 12px;
-      background-color: #ffc10d;
-      border-radius: 16px;
-      border: none;
-      color: #333;
-      margin-bottom: 100px;
-      -webkit-box-shadow: 4px 7px 22px -13px rgba(0, 0, 0, 0.61);
-      -moz-box-shadow: 4px 7px 22px -13px rgba(0, 0, 0, 0.61);
-      box-shadow: 4px 7px 22px -13px rgba(0, 0, 0, 0.61);
-    }
-  }
 }
 
-#services {
-  width: 960px;
-  margin: 0 auto;
-  margin-bottom: 64px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
 
-  .cards {
-    display: flex;
 
-    .service {
-      max-width: 264px;
-      text-align: center;
 
-      i {
-        color: #330033;
-        font-size: 60px;
-      }
 
-      h2 {
-        text-transform: uppercase;
-        color: #330033;
-        font-size: 16px;
-        padding: 12px;
-      }
 
-      p {
-        font-size: 14px;
-      }
-
-      & + div {
-        margin-left: 15px;
-      }
-    }
-  }
-  a {
-    margin-top: 36px;
-    width: 120px;
-    align-self: center;
-    padding: 12px;
-    background-color: transparent;
-    border-radius: 16px;
-    border: solid 1px #330033;
-    text-decoration: none;
-    text-align: center;
-    font-size: 12px;
-    color: #330033;
-    text-transform: uppercase;
-  }
-}
-
-.divider {
-  height: 0.6px;
-  width: 100%;
-  background-color: #ccc;
-}
-
-#portfolio {
-  .container {
-    width: 960px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-
-    h2 {
-      text-transform: uppercase;
-      color: #999;
-      margin: 36px 0;
-      letter-spacing: 5px;
-      text-align: center;
-    }
-    .item {
-      display: flex;
-      img {
-        height: 260px;
-        width: 100%;
-        display: block;
-      }
-
-      .about {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        h3 {
-          font-size: 24px;
-        }
-        p {
-          color: #888;
-          font-size: 14px;
-        }
-        .buttons {
-          a {
-            padding: 12px 28px;
-            background-color: transparent;
-            border-radius: 16px;
-            border: solid 1px #330033;
-            text-decoration: none;
-            font-size: 12px;
-            color: #330033;
-            text-transform: uppercase;
-          }
-          .filled {
-            background-color: #330033;
-            color: #fff;
-          }
-          & > a {
-            margin-right: 10px;
-          }
-        }
-      }
-    }
-  }
-  hr {
-    background-color: #ccc;
-    margin: 96px 0;
-  }
-}
-
-#contact{
-  margin-top: 64px;
-  padding-top: 64px;
-  padding-bottom: 64px;
-  background-color: #330033;
-  color: #fff;
-
-  .container{
-    margin: 0 auto;
-    width: 960px;
-    
-    h1{
-      font-weight: 500;
-      font-size: 28px;
-      max-width: 360px;
-      line-height: 32px;
-      &::after{
-        content: "";
-        margin: 5px ;
-        width: 206px;
-        height: 2px;
-        background-color: #ffc10d;
-        display: block;
-      }
-    }
-    p{
-      margin-top: 16px;
-      font-size: 18px;
-    }
-    form{
-      display: flex;
-      flex-direction: column;
-
-    
-      input, textarea{
-        padding: 16px 0px;
-        margin: 16px 0px;
-        outline: none;
-        border: none;
-        background-color: transparent;
-        border-bottom: solid 2px #fff;
-        color: #fff;
-        font-size: 24px;
-        &::placeholder{
-          color: #fff;
-          font-size: 24px;
-          text-transform: capitalize;
-        }
-        &:focus{
-          border-color: #ffc10d;
-        }
-      }
-
-      button{
-      margin: 0 auto;
-      margin-top: 16px;
-      cursor: pointer;
-      display: block;
-      width: 180px;
-      text-align: center;
-      padding: 12px;
-      background-color: #ffc10d;
-      border-radius: 16px;
-      border: none;
-      color: #333;
-      -webkit-box-shadow: 4px 7px 22px -13px rgba(0, 0, 0, 0.61);
-      -moz-box-shadow: 4px 7px 22px -13px rgba(0, 0, 0, 0.61);
-      box-shadow: 4px 7px 22px -13px rgba(0, 0, 0, 0.61);
-      }
-    }
-  }
-}
